# jogocobrinha

./: CMakeLists.txt  README.md  frut.h  main.cpp  snek.h  visuals.h
include/: fruit.h  snake.h  visuals.h
src/: fruit.cc  main.cc  snake.cc
